client/src/index.css
:root {
  --color-primary: #f90716;
  --color-secondary: #77d970;
  --color-tertiary: #ff7f3f;
  --color-dark: #343a40;
  --color-gray: #eee;
  --color-dark-green: #116530;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  line-height: 1.7;
  background: #fff;
  color: var(--color-dark);
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

a,
link {
  color: var(--color-dark);
  font-weight: 500;
  text-decoration: none;
}

a:hover,
link:hover {
  color: var(--color-primary);
}

.recipe-section-wrapper {
  padding: 1em;
}

.output.recipe-section-wrapper {
  background-color: #77d97010;
  border: 1px solid var(--color-secondary);
  border-radius: 20px;
}

/* Show page */
.recipe-container {
  border: 1px solid var(--color-secondary);
  border-radius: 28px;
  width: 900px;
}

.recipe-wrapper {
  margin-top: 32px;
  display: flex;
  justify-content: space-between;
  gap: 84px;
}

.recipe-wrapper li {
  list-style-type: none;
}

.recipe-image {
  object-fit: cover;
  width: 200px;
  height: 200px;
  border-radius: 8px;
}

.recipe-image.small {
  width: 120px;
  height: 120px;
}

.ingredients li {
  line-height: 1.9;
}

.group {
  border-radius: 8px;
  padding: 4px;
  margin-bottom: 8px;
}

.group1 {
  border: 2px solid var(--color-tertiary);
}
.group2 {
  border: 2px solid #f6d860;
}

.group3 {
  border: 2px solid #95cd41;
}

.group4 {
  border: 2px solid #ea5c2b;
}

.group5 {
  border: 2px solid #ffcc1d;
}
.group6 {
  border: 2px solid #0b4619;
}
.group7 {
  border: 2px solid var(--color-dark-green);
}
.group8 {
  border: 2px solid #e8e8cc;
}

.instruction-number {
  font-weight: 700;
  color: #f90716;
  font-size: 20px;
}

.instruction-header {
  font-weight: 800;
  font-size: 32px;
}

/* Navbar */
.navbar-collapse {
  flex-grow: unset;
}

.collapse.navbar-collapse {
  justify-content: unset;
}

@media screen and (min-width: 992px) {
  .navbar-expand-lg {
    justify-content: space-between;
  }
}

.navbar-brand,
.nav-link {
  padding: 1rem;
  line-height: 1;
}

/* Note: padding bottom below is a hack to get the brand's bottom edge to roughly align with other nav elements */
.navbar-brand {
  font-weight: 700;
  font-size: 36px;
  color: var(--color-dark-green);
  padding-bottom: 1.7rem;
}

.nav-link {
  font-size: 20px;
  text-transform: lowercase;
  color: var(--color-dark);
}

.nav-item {
  display: flex;
  align-items: center;
}

.nav-item .form-control {
  display: inline-block;
  margin-bottom: 0;
}

.form-control {
  margin-bottom: 1rem;
  /* width: unset; */
}

.nav-item a {
  color: var(--color-dark);
}

.nav-item a:hover {
  color: var(--color-dark-green);
}

.btn-nav:hover {
  color: #fff;
  background-color: var(--color-secondary);
}

.btn-nav {
  border: 1px solid var(--color-dark);
}

.url-input {
  width: 400px;
}

.btn {
  vertical-align: unset;
}

.btn-right {
  margin-top: 0.5rem;
  align-self: center;
}

.loader {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 3;
  color: var(--color-tertiary);
  height: 100;
  width: 100;
}

.overlay {
  position: absolute;
  top: 0;
  background-color: var(--color-secondary);
  width: 100vw;
  height: 100vh;
  opacity: 0.9;
  z-index: 2;
}

.disabled {
  box-shadow: none;
  cursor: not-allowed;
  opacity: 0.5;
  pointer-events: none;
}

/* Home */
.recipe-home-container {
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
}

.recipe-home {
  margin: 8px 8px 40px 8px;
  max-width: 240px;
}

.recipe-home .recipe-image {
  border-radius: 12px;
  width: 240px;
}

.title {
  font-size: 18px;
  font-weight: 500;
  line-height: 1;
}
/* Edit Page */
.container-record-form .form-input {
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 1.2;
  margin-bottom: 0.5rem;
}

.selector-input {
  height: 38px;
  border-radius: 0.25rem;
  border-color: rgba(118, 118, 118, 0.3);
}

.selector-input.form-control {
  appearance: auto;
}

.selector-input.disabled {
  background-color: #e9ecef;
}

.instruction-input {
  width: 440px;
}

/* Auth */
.form-group,
.form-group label,
.form-group input {
  /* width: 100%; */
  /* margin-bottom: 0.5rem; */
}

.form-group label {
  font-size: 0.8rem;
}

/* .form-group input {
  padding: 10px 20px;
  border: none;
  border-bottom: 3px solid transparent;
  background-color: var(--color-gray);
  outline-width: 0;
  font-size: 1rem;
} */

.form-group input:focus {
  border-bottom: 3px solid var(--color-tertiary);
}

.input-short {
  width: 140px;
}

.error-message {
  width: 100%;
  display: inline-block;
  padding: 5px;
  background: var(--color-primary);
  color: #fff;
  text-align: center;
  margin: 0.5rem 0;
}

.success-message {
  width: 100%;
  display: inline-block;
  padding: 5px;
  background: var(--color-secondary);
  color: #fff;
  text-align: center;
  margin: 0.5rem 0;
}

